--- a/style.css
+++ b/style.css
@@ -184,7 +184,7 @@ body{
 }  
 
 
-div {
+div.post {
 	
     width: 300px;
     padding: 25px;
@@ -223,16 +223,7 @@ input[type=text]:focus {
 	background-color:#404040 ;
 	
 }
-#footer {
-	clear: both;
-	float: right;
-	width: 100%;
-	padding: 10px 0;
-	text-align: center;
-	font-size: 11px;
-	border-top: 1px solid #888;
-	background: #fff;
-	}
+
 
 
 
