--- a/style.css
+++ b/style.css
@@ -1,6 +1,21 @@
 html { margin-top:0px; 
 		padding-top:0px; 
 	}
+form.search {
+  overflow: hidden;
+}
+input.search {
+  float: right;
+  clear: both;
+}
+div.top{
+	top: 0;
+bottom: 0;
+margin: auto;
+position: absolute;
+left: 0;
+right: 0;
+}
 ul.topnav {
 
   list-style-type: none;
@@ -190,7 +205,7 @@ div.post {
     padding: 25px;
     border: 25px black;
     margin: 25px;
-	position:relative;
+	
 
 }
 
