Got the div for the posts to match the background colour.

--- a/style.css
+++ b/style.css
@@ -214,7 +214,7 @@ div.post {
     padding: 25px;
     border: 25px black;
     margin: 25px;
-	
+	background-color:#F8F8F8;
 	
 
 }
@@ -224,7 +224,7 @@ div.comment {
     padding: 25px;
     border: 25px black;
     margin: 25px;
-
+	
 	
 	
 
