Aligned related articles to the top right and the child category has its own sub menu bar

--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@
 form.search {
   overflow: hidden;
 }
+ul.related{
+	float: right;
+	clear: both;
+}
+
 input.search {
   float: right;
   clear: both;
