--- a/style.css
+++ b/style.css
@@ -75,6 +75,15 @@ ul.footnav li a {
   transition: 0.3s;
   font-size: 16px;
 }
+iframe.embed {
+
+	width:560px;
+	height: 315px;
+ 
+
+	}
+
+
 ul.nav li a:hover {background-color: #404040}
 
 ul.nav li.icon {display: none;}
@@ -82,7 +91,13 @@ ul.nav li.icon {display: none;}
 
 
 @media screen and  (max-width:980px) {	
-	
+	iframe.embed {
+
+	width:300px;
+	height: 200px;
+ 
+
+	}
 	ul.nav{
 		display:block;
 		 float:center;
