--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ input[type=submit] {
     background-color:#F5F5F5;
 	width: 100;
 }
+
 ul.topnav {
 
   list-style-type: none;
@@ -43,6 +44,11 @@ ul.topnav {
   padding:0;
   overflow: hidden; 
   background-color:#002334; 
+/* 
+  width: 100%;
+position: fixed;
+*/
+
 }
 ul.topnav li {float: left;}
 
