--- a/style.css
+++ b/style.css
@@ -7,6 +7,11 @@ form.search {
   float:right;
   width:200px;
 }
+div.rp{
+	float:right;
+	
+	
+}
 ul.related{
 	float: left;
 	clear: both;
@@ -52,11 +57,15 @@ ul.topnav {
   padding:0;
   overflow: hidden; 
   background-color:#002334; 
+  height:60px;
  
  /* width: 100%;
 position: fixed;
 */
 
+}
+body {
+    padding-top: 100px; /* This should be equal to the height of your header */
 }
 ul.topnav li {float: left;}
 
@@ -114,6 +123,7 @@ ul.nav{
 	width: 100%;
 	position: fixed;
 
+
 }
 
 
@@ -123,6 +133,12 @@ iframe.embed {
 	height: 250px;
  
 
+	}
+	div.rp{
+   
+    clear:both;
+	bottom: 0px;
+	
 	}
 
 	video.smallPreview{
