--- a/style.css
+++ b/style.css
@@ -126,11 +126,16 @@ ul.nav{
 
 
 }
-
+a.titles{
+	color: black;
+	text-decoration:none; 
+	font-size:100%;
+}
 
 a:link{
 	color: black;
 	text-decoration:none; 
+
 }
 a:visited{
 color: black;
@@ -262,6 +267,7 @@ iframe.embed {
  
 
 	}
+	
 	div.rp{
    
     clear:both;
@@ -290,7 +296,7 @@ iframe.embed {
 	}
 	iframe.nextPost{
 	width:200px;
-	height: 150px;
+	height: 112px;
 }
 	ul.nav{
 		display:block;
@@ -321,7 +327,7 @@ iframe.embed {
 	
 	a{
 		margin:0px;
-		font-size:12px;
+	
 		color:black;
 	}
     
@@ -366,16 +372,7 @@ iframe.embed {
 	overflow:hidden;
 
 	}
-	iframe.medium{
-	width:150px;
-	height: 69px;
-	overflow:hidden;
-	}
-	iframe.small{
-	width:75px;
-	height:50px;
-	overflow:hidden;
-	}
+	
 
 }
 
